--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -54,18 +54,24 @@
 
 <p>You will require administrator rights on your machine to install <a href="http://cran.r-project.org/bin/macosx/">R</a>.
 
-<ol><li>Make sure you have the latest version of R installed on your computer (or at least a version >= 3.0.1).  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest installation file (.pkg file) to your hard drive and install.</li>
-	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:<ol type="a">
+<ol>
+	<li>Make sure you have the latest version of R installed on your computer (or at least a version >= 3.0.1).  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest installation file (.pkg file) to your hard drive and install.</li>
+	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
+	<ol type="a">
+		<li>Download the latest version of the <a href="OSX/qfa_0.0-13.tar.gz">installer package</a></li>
 		<li>Start the R application</li>
-		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
-	</ol>
-<code>
-install.packages("qfa")
-</code>
+		<li>Navigate to Packages & Data -> Package Installer</li>
+		<li>Choose Local Binary Package in the menu for Package Repository</li>
+		<li>Select "Install at System Level"</li>
+		<li>Click the "Install" button</li>
+		<li>Navigate to the installer package downloaded in step a), click ok</li>
+		<li>Close the Packages & Data windows</li>
 </ol>
-Note that, depending on the version of your operating system, you might be prompted to install the <a href="http://xquartz.macosforge.org">X11</a> software for Mac at a later stage.  X11 is necessary for the visualisation tool to work, so please install it if promoted.  This may require restarting your machine.</p>
+</ol>
 
-<p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2.</p>
+Note that, depending on the version of your operating system, you might be prompted to install the <a href="http://xquartz.macosforge.org">X11</a> software for Mac at a later stage.  X11 is necessary for the visualisation tool to work, so please install it if prompted.  This may require restarting your machine.</p>
+
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.</p>
 
 <hr></hr>
 
@@ -79,7 +85,7 @@ Note that, depending on the version of your operating system, you might be promp
 	<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
 </ol></li>
 <code>
-install.packages("qfa")
+install.packages("qfa", repos="http://R-Forge.R-project.org")
 </code>
 </ol>
 
