More OSX installation stuff
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@429 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
 
 <p>The easiest way to install the package is to execute the following command during an <a href="http://cran.r-project.org/">R</a> session (i.e. install R, start the program and type the following line, followed by enter):
 <code class="indent">install.packages("qfa", repos="http://R-Forge.R-project.org")</code>
-Note that the latest version of <a href="http://cran.r-project.org/">R</a> is required for easy, automatic installation. Source code can be used to build the package for older versions of <a href="http://cran.r-project.org/">R</a> if required and can be checked out from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> by <a href="http://en.wikipedia.org/wiki/Apache_Subversion">subversion</a>.</p>
+Note that the latest version of <a href="http://cran.r-project.org/">R</a> is required for easy, automatic installation. Source code can be used to build the package for older versions of <a href="http://cran.r-project.org/">R</a> if required and can be checked out from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> by <a href="http://en.wikipedia.org/wiki/Apache_Subversion">subversion</a>.  Unfortunately R-forge no longer build binaries for OSX, so for installation under OSX, please use <a href="visTool/#osx">these instructions</a>.</p>
 
 <p>Once installed, the package can be loaded ready for use with:
 <code class="indent">library(qfa)</code>
