OSX "binary" packages generated with latest version of R seem to be source packages...  Updating instructions to reflect this.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@432 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -61,7 +61,7 @@
 		<li>Download the latest version of the <a href="OSX/qfa_0.0-13.tar.gz">installer package</a></li>
 		<li>Start the R application</li>
 		<li>Navigate to Packages & Data -> Package Installer</li>
-		<li>Choose Local Binary Package in the menu for Package Repository</li>
+		<li>Choose Local Source Package in the menu for Package Repository</li>
 		<li>Select "Install at System Level"</li>
 		<li>Click the "Install" button</li>
 		<li>Navigate to the installer package downloaded in step a), click ok</li>
