--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,14 @@
 <h4>Contents</h4>
 <ul>
 	<li><a href="#intro">Introduction</a></li>
-	<li><a href="#install">Installation</a></li>
-
+	<li><a href="#install">Installation</a>
+		<ul>
+			<li><a href="#windows">Windows</a></li>
+			<li><a href="#osx">OSX</a></li>
+			<li><a href="#linux">Linux</a></li>
+			<li><a href="#other">Other</a></li>
+		</ul></li>
+	<li><a href="#loading">Loading</a></li>
 	<li><a href="#functions">Functions overview</a>
 		<ul>
 			<li><a href="#reading">Reading data</a></li>
@@ -65,15 +71,80 @@
 
 <a name="install"><h2>QFA package installation</h2></a>
 
-<p>This <a href="http://cran.r-project.org/">R</a> package is available for download for several operating systems from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> at this address:
+<a name="windows"><h3>Installation for Windows</h3></a>
 
-<a href="http://r-forge.r-project.org/projects/qfa">http://r-forge.r-project.org/projects/qfa</a></p>
+<p>You will require administrator rights on your PC to install <a href="http://cran.r-project.org/bin/windows/base/">R</a> and the qfa package.
 
-<p>The easiest way to install the package is to execute the following command during an <a href="http://cran.r-project.org/">R</a> session (i.e. install R, start the program and type the following line, followed by enter):
-<code class="indent">install.packages("qfa", repos="http://R-Forge.R-project.org")</code>
-Note that the latest version of <a href="http://cran.r-project.org/">R</a> is required for easy, automatic installation. Source code can be used to build the package for older versions of <a href="http://cran.r-project.org/">R</a> if required and can be checked out from <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> by <a href="http://en.wikipedia.org/wiki/Apache_Subversion">subversion</a>.  Unfortunately R-forge no longer build binaries for OSX, so for installation under OSX, please use <a href="visTool/#osx">these instructions</a>.</p>
+<ol>
+<li>Make sure you have the latest version of R installed on your computer.  If not, <a href="http://cran.r-project.org/bin/windows/base/">download</a> the latest .exe file to your hard drive and install.</li>
+<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
+	<ol type="a">
+		<li>Start the R application (e.g. Start->All Programs->R->R x64 3.0.1)</li>
+		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+	</ol>
+</li>
+<code>
+install.packages("qfa", repos="http://R-Forge.R-project.org")
+</code>
+</ol>
+</p>
 
-<p>Once installed, the package can be loaded ready for use with:
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2.</p>
+
+<a name="osx"><h3>Installation for OSX</h3></a>
+
+<p>You will require administrator rights on your machine to install <a href="http://cran.r-project.org/bin/macosx/">R</a>.
+
+<ol>
+	<li>Make sure you have the latest version of R installed on your computer (or at least a version >= 3.0.1).  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest R installation file (.pkg file) to your hard drive and install.</li>
+	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
+	<ol type="a">
+		<li>Download the latest version of the <a href="OSX/qfa_0.0-13.tar.gz">installer package</a></li>
+		<li>Start the R application</li>
+		<li>Navigate to Packages & Data -> Package Installer</li>
+		<li>Choose Local Source Package in the menu for Package Repository</li>
+		<li>Select "Install at System Level"</li>
+		<li>Click the "Install" button</li>
+		<li>Navigate to the installer package downloaded in step a), click ok</li>
+		<li>Close the Packages & Data windows</li>
+</ol>
+</ol>
+
+Note that, depending on the version of your operating system, you might be prompted to install the <a href="http://xquartz.macosforge.org">X11</a> software for Mac at a later stage.  X11 is necessary for the visualisation tool to work, so please install it if prompted.  This may require restarting your machine.</p>
+
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.</p>
+
+<a name="linux"><h3>Installation for Linux</h3></a>
+
+<p>You will require administrator rights to install the latest version of <a href="http://cran.r-project.org/bin/windows/base/">R</a> and the qfa package.
+
+<ol>
+<li>Make sure you have the latest version of R installed on your computer.  For example, here are some <a href="http://cran.r-project.org/bin/linux/ubuntu/README">instructions for installation under Ubuntu</a></li>
+<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
+	<ol type="a">
+		<li>Start the R application (e.g. type "R" at the command line)</li>
+		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+	</ol>
+</li>
+<code>
+install.packages("qfa", repos="http://R-Forge.R-project.org")
+</code>
+</ol>
+</p>
+
+<p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2.</p>
+
+<a name="other"><h3>Other installation methods</h3></a>
+
+<p>Package source code can be checked out from the <a href="http://r-forge.r-project.org/scm/?group_id=880">SVN repository</a> at the <a href="http://r-forge.r-project.org/projects/qfa">R-forge</a> website: <a href="http://r-forge.r-project.org/projects/qfa">http://r-forge.r-project.org/projects/qfa</a></p>
+
+<p>Binary packages for MS Windows and OSX can be found on the same page.</p>
+
+<hr></hr>
+
+<a name="loading"><h2>Loading the QFA package</h2></a>
+
+<p>Once installed, the package must be loaded, to make it ready for use, with:
 <code class="indent">library(qfa)</code>
 Detailed documentation can be found in the package manual <a href="docs/qfa-manual.pdf">here</a> or by executing:
 <code class="indent">help(package="qfa")</code>
