--- a/www/index.html
+++ b/www/index.html
@@ -146,11 +146,11 @@ install.packages("qfa", repos="http://R-Forge.R-project.org")
 
 <p>Once installed, the package must be loaded, to make it ready for use, with:
 <code class="indent">library(qfa)</code>
-Detailed documentation can be found in the package manual <a href="docs/qfa-manual.pdf">here</a> or by executing:
+Detailed documentation can be found in the <a href="docs/qfa-manual.pdf">online version of the package manual</a> or by executing:
 <code class="indent">help(package="qfa")</code>
 Documentation for specific functions can also be obtained using the usual <a href="http://cran.r-project.org/">R</a> mechanisms.  For example, help on the function <code>colonyzer.read</code> can be obtained with:
 <code class="indent">?colonyzer.read</code></a>
-A short document outlining QFA and the package functions can be accessed <a href="docs/qfa.pdf">here</a> by:
+A short document outlining QFA and the package functions can be accessed <a href="docs/qfa.pdf">online</a> or by executing:
 <code class="indent">vignette("qfa")</code>
 Finally, some code demonstrating analysis of a small subset of the <a href="http://research.ncl.ac.uk/colonyzer/AddinallQFA/">data</a> presented in <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> can be executed by:
 <code class="indent">demo("telomereCap")</code>
@@ -174,7 +174,7 @@ Finally, some code demonstrating analysis of a small subset of the <a href="http
 <a name="auxiliary"><h3>Auxiliary functions</h3></a>
 <p>Together with the functions for carrying out the raw analysis above, we provide several functions for visualising the data, the fit of the logistic model to the data and the visualisation of evidence for epistatic interaction.  These visualisation tools are important for understanding unexpected fitness patterns, tracking bugs and increasing user confidence in the validity of the sophisticated QFA workflows.</p>
 
-<p>One such function, the qfaR visualisation tool, generates interactive scatterplots for browsing genome-wide fitness comparisons.  Extensive documentation for this tool can be found <a href="visTool">here</a>.</p>
+<p>One such function, the qfaR visualisation tool, generates interactive scatterplots for browsing genome-wide fitness comparisons.  Extensive documentation for this tool can be found <a href="visTool">on a dedicated website</a>.</p>
 </article>
 
 </body> 
