--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -29,9 +29,9 @@
 </nav>
 
 <article>
-<p>This page is for users interested in the interactive data visualisation tools which form a part of the QFA R package.  A more general introduction to the QFA R package can be found <a href="../">here</a>.  Currently, interactive R plots are only available under OSX and Windows.  A web-based visualisation tool is under development <a href="http://bioinf1.ncl.ac.uk/qfa">here</a>.  </p>
+<p>This page is for users interested in the interactive data visualisation tools which form a part of the QFA R package.  A more general introduction to the QFA R package can be found <a href="../">here</a>.  Currently, interactive R plots are only available under OSX and Windows.  A <a href="http://bioinf1.ncl.ac.uk/qfa"web-based visualisation tool</a> is currently under development</a>.</p>
 
-<p>You can <a href="javascript:window.print()">print</a> this document to have a physical copy to hand while using the qfaR visualisation tool.</p>
+<p>You can <a href="javascript:window.print()">print</a> this document in order to have a physical copy to hand while interacting with the qfaR visualisation tool.</p>
 
 <a name="intro"><h2>Introduction</h2></a>
 
