"Unfixed" the sidebar (it now remains at top of page).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@436 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -12,7 +12,7 @@
  
 <header>
 <a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
-<img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="180" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
+<img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="15%" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
 <h1>qfaR visualisation tool</h1> 
 <hr></hr>
 </header>
@@ -28,8 +28,8 @@
 </ul>
 </nav>
 
-<article>
-<p>This page is for users interested in the interactive data visualisation tools which form a part of the QFA R package.  A more general introduction to the QFA R package can be found <a href="../">here</a>.  Currently, interactive R plots are only available under OSX and Windows.  A <a href="http://bioinf1.ncl.ac.uk/qfa"web-based visualisation tool</a> is currently under development</a>.</p>
+<article id="main">
+<p>This page is for users interested in the interactive data visualisation tools which form a part of the QFA R package.  A more general introduction to the QFA R package can be found <a href="../">here</a>.  Currently, interactive R plots are only available under OSX and Windows.  A <a href="http://bioinf1.ncl.ac.uk/qfa">web-based visualisation tool</a> is currently under development</a>.</p>
 
 <p>You can <a href="javascript:window.print()">print</a> this document in order to have a physical copy to hand while interacting with the qfaR visualisation tool.</p>
 
@@ -39,9 +39,9 @@
 
 <p>The qfaR visualisation tool provides a means to interact with such scatterplots, to make rapid, visual comparisons between different pairs of QFA experiments and to query plots in real time, aiding analysis and interpretation of the underlying data.  qfaR visualisation can be applied to any paired sets of control and query fitnesses, including SGA screen data, or liquid growth fitnesses.</p>
 
-<a href="QFAVisualisation0001.png"><img src="QFAVisualisation0001.png" width=320></a>
-<a href="QFAVisualisation0002.png"><img src="QFAVisualisation0002.png" width=320></a>
-<a href="QFAVisualisation0003.png"><img src="QFAVisualisation0003.png" width=320></a>
+<a href="QFAVisualisation0001.png"><img src="QFAVisualisation0001.png" width="32%"></a>
+<a href="QFAVisualisation0002.png"><img src="QFAVisualisation0002.png" width="32%"></a>
+<a href="QFAVisualisation0003.png"><img src="QFAVisualisation0003.png" width="32%"></a>
 
 <p style="font-size: 75%;"><b>Three qfaR Fitness Plots</b> Scatterplots of data from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> printed using the qfaR visualisation tool.  The same four functionally related genes are highlighted in purple on each plot and names printed.  Genes highlighted in green significantly enhance the background mutation phenotype indicated in the y-axis label.  Similarly, genes highlighted in red suppress the phenotype.  Blue horizontal and vertical lines intersect at the point corresponding to <i>his3&Delta;</i> (a wild-type surrogate).  Solid grey line is predicted double-mutant fitness, given single deletion fitness and assuming a multiplicative model of genetic independence.  Dashed grey line is the line of equal fitness.  Click on panels to zoom.</p>
 
