--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -26,6 +26,14 @@
 	<li><a href="#instruct">Loading the tool</a></li>
 	<li><a href="#interact">Interacting with plots</a></li>
 </ul>
+
+<h4>QFA</h4>
+<ul>
+	<li><a href="http://research.ncl.ac.uk/qfa">Experiment</a></li>
+	<li><a href="http://research.ncl.ac.uk/colonyzer">Colonyzer</a></li>
+	<li><a href="#intro">R package</a></li>
+	<li><a href="../">Visualisation tool</a></li>
+</ul>
 </nav>
 
 <article id="main">
