--- a/www/index.html
+++ b/www/index.html
@@ -69,9 +69,9 @@
 
 <hr></hr>
 
-<a name="install"><h2>QFA package installation</h2></a>
+<a name="install"><h2>Installing or updating the QFA package</h2></a>
 
-<a name="windows"><h3>Installation for Windows</h3></a>
+<a name="windows"><h3>Installing or updating under windows</h3></a>
 
 <p>You will require administrator rights on your PC to install <a href="http://cran.r-project.org/bin/windows/base/">R</a> and the qfa package.
 
@@ -81,17 +81,17 @@
 	<ol type="a">
 		<li>Start the R application (e.g. Start->All Programs->R->R x64 3.0.1)</li>
 		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+		<code>
+install.packages("qfa", repos="http://R-Forge.R-project.org")
+		</code>
 	</ol>
 </li>
-<code>
-install.packages("qfa", repos="http://R-Forge.R-project.org")
-</code>
 </ol>
 </p>
 
 <p>Installation should be complete.  You do not have to go through these steps again to use the tool.  To update an existing installation to the latest version, simply repeat step 2.</p>
 
-<a name="osx"><h3>Installation for OSX</h3></a>
+<a name="osx"><h3>Installing or updating under OSX</h3></a>
 
 <p>You will require administrator rights on your machine to install <a href="http://cran.r-project.org/bin/macosx/">R</a> & the QFA package.
 
@@ -99,6 +99,11 @@ install.packages("qfa", repos="http://R-Forge.R-project.org")
 	<li>Make sure you have the latest version of R installed on your computer (or at least a version >= 3.0.1).  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest R installation file (.pkg file) to your hard drive and install.</li>
 	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
 	<ol type="a">
+		<li>If you already have a version installed, you can check the installed version number by pasting the following line of code after the command line prompt in an R session (followed by Enter):
+		<br><code>
+sessionInfo("qfa")
+		</code>
+		</li>
 		<li>Save the latest version of the <a href="OSX/qfa_0.0-18.tar.gz">installer package</a> to your hard-drive, noting its location</li>
 		<li>Start the R application</li>
 		<li>Navigate to Packages & Data -> Package Installer</li>
@@ -120,7 +125,7 @@ Note that the first time that you install the QFA package, depending on the vers
 
 <p>Installation should be complete.  You do not have to go through these steps again to use the tool (and in particular you should not have to install X11 again).  To update an existing installation to the latest version, simply repeat step 2.</p>
 
-<a name="linux"><h3>Installation for Linux</h3></a>
+<a name="linux"><h3>Installing or updating under Linux</h3></a>
 
 <p>You will require administrator rights to install the latest version of <a href="http://cran.r-project.org/bin/windows/base/">R</a> and the qfa package.
 
@@ -130,11 +135,12 @@ Note that the first time that you install the QFA package, depending on the vers
 	<ol type="a">
 		<li>Start the R application (e.g. type "R" at the command line)</li>
 		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+		<code>
+install.packages("qfa", repos="http://R-Forge.R-project.org")
+		</code>
 	</ol>
 </li>
-<code>
-install.packages("qfa", repos="http://R-Forge.R-project.org")
-</code>
+
 </ol>
 </p>
 
