--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -2,7 +2,7 @@
 <html lang=en> 
 <head>
 <meta charset=utf-8> 
-<title>qfaR visualisation tool</title> 
+<title>interVis: visualising interactions in qfa screens</title> 
 <meta name="desciption" content="qfaR visualisation tool">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="../CLstyle.css">
@@ -13,7 +13,7 @@
 <header>
 <a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
 <img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="15%" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
-<h1>qfa visualisation tool</h1> 
+<h1>interVis: visualising interactions in qfa screens</h1> 
 <hr></hr>
 </header>
 
@@ -34,29 +34,29 @@
 
 <p>QFA experiments are often used to compare the fitnesses of independent microbial strains under two different environmental conditions (e.g. query and control conditions), or in two different genetic backgrounds, to search for evidence for drug interactions or genetic interactions for example.  Such comparisons can become difficult to visualise by static scatterplot due to the sheer number of strains examined, simply because simultaneous labelling of ~4,000 genes on a single plot is not practical.  For example, in <a href="http://www.plosgenetics.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pgen.1001362.g002&representation=PNG_M">Figure 2</a> from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> the labels for many genes in interesting locations are obscured.</p>
 
-<p>The qfaR visualisation tool provides a means to interact with such scatterplots, to make rapid, visual comparisons between different pairs of QFA experiments and to query plots in real time, aiding analysis and interpretation of the underlying data.  qfaR visualisation can be applied to any paired sets of control and query fitnesses, including SGA screen data, or liquid growth fitnesses.</p>
+<p>interVis provides a means to interact with such scatterplots, to make rapid, visual comparisons between different pairs of QFA experiments and to query plots in real time, aiding analysis and interpretation of the underlying data.  interVis can be applied to any paired sets of control and query fitnesses, including SGA screen data, or liquid growth fitnesses.</p>
 
 <a href="QFAVisualisation0001.png"><img src="QFAVisualisation0001.png" width=320></a>
 <a href="QFAVisualisation0002.png"><img src="QFAVisualisation0002.png" width=320></a>
 <a href="QFAVisualisation0003.png"><img src="QFAVisualisation0003.png" width=320></a>
 
-<p style="font-size: 75%;"><b>Three qfaR Fitness Plots</b> Scatterplots of data from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> printed using the qfaR visualisation tool.  The same four functionally related genes are highlighted in purple on each plot and names printed.  Genes highlighted in green significantly enhance the background mutation phenotype indicated in the y-axis label.  Similarly, genes highlighted in red suppress the phenotype.  Blue horizontal and vertical lines intersect at the point corresponding to <i>his3&Delta;</i> (a wild-type surrogate).  Solid grey line is predicted double-mutant fitness, given single deletion fitness and assuming a multiplicative model of genetic independence.  Dashed grey line is the line of equal fitness.  Click on panels to zoom.</p>
+<p style="font-size: 75%;"><b>Three qfaR Fitness Plots</b> Scatterplots of data from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> printed using interVis.  The same four functionally related genes are highlighted in purple on each plot and names printed.  Genes highlighted in green significantly enhance the background mutation phenotype indicated in the y-axis label.  Similarly, genes highlighted in red suppress the phenotype.  Blue horizontal and vertical lines intersect at the point corresponding to <i>his3&Delta;</i> (a wild-type surrogate).  Solid grey line is predicted double-mutant fitness, given single deletion fitness and assuming a multiplicative model of genetic independence.  Dashed grey line is the line of equal fitness.  Click on panels to zoom.</p>
 
 <p>Screen pairs are indicated with shorthand labels on the x and y axis.  For example, the label 'CDC13-1 20' represents an experiment combining the yeast deletion collection with a background <i>cdc13-1</i> mutation, grown at 20&deg;C.  Similarly, the label 'URA3 20' represents an experiment combining the yeast deletion collection with a neutral, background <i>ura3&Delta;</i> mutation, grown at 20&deg;C.  For each QFA pair, the plot title indicates the fitness definition used (e.g. <i>MDR*MDP</i> or <i>MDR</i>), the statistic used to summarise replicate fitness observations (e.g. mean or median) and the statistical test used to identify enhancers and suppressors (e.g. Student's t-test or the Wilcoxon test).</p>
 
 <hr></hr>
 
-<a name="install"><h2>Installing or updating the visualisation tool</h2></a>
+<a name="install"><h2>Installing or updating interVis</h2></a>
 
-<p>The visualisation tool is part of the qfa R package.  To install the tool, please follow the <a href="http://qfa.r-forge.r-project.org/#install">installation instructions</a> on the qfa R package webpage.</p>
+<p>interVis is part of the qfa R package.  To install or update the tool, please follow the <a href="http://qfa.r-forge.r-project.org/#install">instructions</a> on the qfa R package webpage.</p>
 
 <hr></hr>
 <a name="doc"><h2>Documentation</h2></a>
 
-<p>Once the qfa package is installed, you can access detailed documentation for the visualisation tool by typing the following command into the R console (followed by pressing enter):</p>
+<p>Once the qfa package is installed, you can access detailed documentation for interVis by typing the following command into the R console (followed by pressing enter):</p>
 
 <code>
-vignette("qfa")
+vignette("interVis")
 </code>
 
 <p>This should open a webpage in your browser.</p>
