--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -2,7 +2,7 @@
 <html lang=en> 
 <head>
 <meta charset=utf-8> 
-<title>interVis: visualising interactions in qfa screens</title> 
+<title>iRVis: inteRactive Visualisation of fitness comparisons</title> 
 <meta name="desciption" content="qfaR visualisation tool">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" type="text/css" href="../CLstyle.css">
@@ -13,7 +13,7 @@
 <header>
 <a href="http://www.flickr.com/photos/conchur/8187964744/" title="FourCulturesCropped by Conor Lawless, on Flickr">
 <img src="http://farm9.staticflickr.com/8489/8187964744_583f1264b2_m.jpg" width="15%" alt="FourCulturesCropped" style="display: inline; float:left; margin-right: 5px; margin-bottom: 30px;"></a>
-<h1>interVis: visualising interactions in qfa screens</h1> 
+<h1>iRVis: inteRactive Visualisation of fitness comparisons</h1> 
 <hr></hr>
 </header>
 
@@ -56,7 +56,7 @@
 <p>Once the qfa package is installed, you can access detailed documentation for interVis by typing the following command into the R console (followed by pressing enter):</p>
 
 <code>
-vignette("interVis")
+vignette("iRVis")
 </code>
 
 <p>This should open a webpage in your browser.</p>
