--- a/www/visTool/index.html
+++ b/www/visTool/index.html
@@ -34,21 +34,19 @@
 
 <p>QFA experiments are often used to compare the fitnesses of independent microbial strains under two different environmental conditions (e.g. query and control conditions), or in two different genetic backgrounds, to search for evidence for drug interactions or genetic interactions for example.  Such comparisons can become difficult to visualise by static scatterplot due to the sheer number of strains examined, simply because simultaneous labelling of ~4,000 genes on a single plot is not practical.  For example, in <a href="http://www.plosgenetics.org/article/fetchObject.action?uri=info:doi/10.1371/journal.pgen.1001362.g002&representation=PNG_M">Figure 2</a> from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> the labels for many genes in interesting locations are obscured.</p>
 
-<p>interVis provides a means to interact with such scatterplots, to make rapid, visual comparisons between different pairs of QFA experiments and to query plots in real time, aiding analysis and interpretation of the underlying data.  interVis can be applied to any paired sets of control and query fitnesses, including SGA screen data, or liquid growth fitnesses.</p>
+<p>iRVis provides a means to interact with such scatterplots, to make rapid, visual comparisons between different pairs of QFA experiments and to query plots in real time, aiding analysis and interpretation of the underlying data.  iRVis can be applied to any paired sets of control and query fitnesses, including SGA screen data, or liquid growth fitnesses.</p>
 
 <a href="QFAVisualisation0001.png"><img src="QFAVisualisation0001.png" width=320></a>
 <a href="QFAVisualisation0002.png"><img src="QFAVisualisation0002.png" width=320></a>
 <a href="QFAVisualisation0003.png"><img src="QFAVisualisation0003.png" width=320></a>
 
-<p style="font-size: 75%;"><b>Three qfaR Fitness Plots</b> Scatterplots of data from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> printed using interVis.  The same four functionally related genes are highlighted in purple on each plot and names printed.  Genes highlighted in green significantly enhance the background mutation phenotype indicated in the y-axis label.  Similarly, genes highlighted in red suppress the phenotype.  Blue horizontal and vertical lines intersect at the point corresponding to <i>his3&Delta;</i> (a wild-type surrogate).  Solid grey line is predicted double-mutant fitness, given single deletion fitness and assuming a multiplicative model of genetic independence.  Dashed grey line is the line of equal fitness.  Click on panels to zoom.</p>
-
-<p>Screen pairs are indicated with shorthand labels on the x and y axis.  For example, the label 'CDC13-1 20' represents an experiment combining the yeast deletion collection with a background <i>cdc13-1</i> mutation, grown at 20&deg;C.  Similarly, the label 'URA3 20' represents an experiment combining the yeast deletion collection with a neutral, background <i>ura3&Delta;</i> mutation, grown at 20&deg;C.  For each QFA pair, the plot title indicates the fitness definition used (e.g. <i>MDR*MDP</i> or <i>MDR</i>), the statistic used to summarise replicate fitness observations (e.g. mean or median) and the statistical test used to identify enhancers and suppressors (e.g. Student's t-test or the Wilcoxon test).</p>
+<p style="font-size: 75%;"><b>Three iRVis Fitness Plots</b> Scatterplots of data from <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> printed using iRVis.  Three functionally related genes are highlighted in purple on each plot and names printed.  Genes highlighted in green significantly enhance the background mutation phenotype indicated in the y-axis label.  Similarly, genes highlighted in red suppress the phenotype.  Blue horizontal and vertical lines intersect at the point corresponding to <i>his3&Delta;</i> (a wild-type surrogate).  Solid grey line is predicted double-mutant fitness, given single deletion fitness and assuming a multiplicative model of genetic independence.  Dashed grey line is the line of equal fitness.  Click on panels to zoom.</p>
 
 <hr></hr>
 
-<a name="install"><h2>Installing or updating interVis</h2></a>
+<a name="install"><h2>Installing or updating iRVis</h2></a>
 
-<p>interVis is part of the qfa R package.  To install or update the tool, please follow the <a href="http://qfa.r-forge.r-project.org/#install">instructions</a> on the qfa R package webpage.</p>
+<p>iRVis is part of the qfa R package.  To install or update the tool, please follow the <a href="http://qfa.r-forge.r-project.org/#install">instructions</a> on the qfa R package webpage.</p>
 
 <hr></hr>
 <a name="doc"><h2>Documentation</h2></a>
