--- a/www/index.html
+++ b/www/index.html
@@ -77,6 +77,16 @@
 
 <ol>
 <li>Make sure you have the latest version of R installed on your computer.  If not, <a href="http://cran.r-project.org/bin/windows/base/">download</a> the latest .exe file to your hard drive and install.</li>
+<li>If they are not present on your system, you may need to install some extra R packages that the qfa package uses.  To install these:
+	<ol type="a">
+		<li>Start the R application (e.g. Start->All Programs->R->R x64 3.0.1)</li>
+		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+	</ol>
+</li>
+<code>
+install.packages(c("knitr","DEoptim","sp"))
+</code>
+</li>
 <li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
 	<ol type="a">
 		<li>Start the R application (e.g. Start->All Programs->R->R x64 3.0.1)</li>
@@ -97,6 +107,16 @@ install.packages("qfa", repos="http://R-Forge.R-project.org")
 
 <ol>
 	<li>Make sure you have the latest version of R installed on your computer (or at least a version >= 3.0.1).  If not, <a href="http://cran.r-project.org/bin/macosx/">download</a> the latest R installation file (.pkg file) to your hard drive and install.</li>
+	<li>If they are not present on your system, you may need to install some extra R packages that the qfa package uses.  To install these:
+	<ol type="a">
+		<li>Start the R application</li>
+		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+	</ol>
+</li>
+<code>
+install.packages(c("knitr","DEoptim","sp"))
+</code>
+</li>
 	<li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
 	<ol type="a">
 		<li>If you already have a version installed, you can check the installed version number by pasting the following line of code after the command line prompt in an R session (followed by Enter):
@@ -131,6 +151,16 @@ Note that the first time that you install the QFA package, depending on the vers
 
 <ol>
 <li>Make sure you have the latest version of R installed on your computer.  For example, here are some <a href="http://cran.r-project.org/bin/linux/ubuntu/README">instructions for installation under Ubuntu</a></li>
+<li>If they are not present on your system, you may need to install some extra R packages that the qfa package uses.  To install these:
+	<ol type="a">
+		<li>Start the R application (e.g. type "R" at the command line)</li>
+		<li>Paste the following line of code after the command line prompt (followed by Enter):</li>
+	</ol>
+</li>
+<code>
+install.packages(c("knitr","DEoptim","sp"))
+</code>
+</li>
 <li>Install the qfa package containing the visualisation tool and the <a href="http://www.plosgenetics.org/doi/pgen.1001362">Addinall et al., 2011</a> QFA datasets:
 	<ol type="a">
 		<li>Start the R application (e.g. type "R" at the command line)</li>
